--- a/book.bib
+++ b/book.bib
@@ -260,15 +260,14 @@ year = {2013}
 }
 
 @report{Efla2015,
-author = {Páll Höskuldsson, Arngrímur Thorlacius},
+author = {{Páll Höskuldsson og Arngrímur Thorlacius}},
 title = {Uppruni svifryks í Reykjavík, rannsóknarskýrsla},
 institution = {Efla Verkfræðistofa, Efnagreiningar ehf.},
 year = {2015}}
 
 @report{tollur2017,
-author = {fyrir embætti tollstjóra},
+author = {{Embætti tollstjóra}},
 title = {Tollskrá},
-institution = {Embætti tollstjóra},
 year = {2017}}
 volume = {1. útgáfa}
 url = {https://www.tollur.is/library/Skrar/Tollskra/Tollskrá 2017.pdf}
@@ -529,10 +528,10 @@ year = {2016}
 }
 
 @article{Þorðarson2012,
-author = {Þ{\'{o}}rðarson, Tryggvi},
+author = {{Tryggvi Þ{\'{o}}rðarson}},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/TÞsk{\'{o}}lp2012.pdf:pdf},
 title = {{Staða sk{\'{o}}lpm{\'{a}}la {\'{I}}slandi Stj{\'{o}}rns{\'{y}}sla fr{\'{a}}veitum{\'{a}}la}},
-url = {http://www.vafri.hi.is/wp-content/uploads/2012/10/2.L{\'{i}}fr{\ae}n-hreinsun.-Staða-sk{\'{o}}lpm{\'{a}}la-{\'{a}}-{\'{I}}slandi{\_}TÞ1.pdf},
+url = {https://tinyurl.com/yyo5qywc},
 year = {2012}
 }
 
@@ -542,8 +541,7 @@ file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rpla
 institution = {Umhverfisstofnun},
 number = {2. {\'{u}}tg{\'{a}}fa},
 title = {{Samantekt um st{\"{o}}ðu fr{\'{a}}veitum{\'{a}}la {\'{a}} {\'{I}}slandi {\'{a}}rið 2014}},
-url = {https://www.ust.is/library/Skrar/utgefid-efni/astand-fridlystra-svaeda/Stöðuskýrsla 2017 um fr{\'{a}}rennslism{\'{a}}l.pdf},
-volume = {2017},
+url = {https://tinyurl.com/y6b6x49y},
 year = {2017}
 }
 
@@ -661,12 +659,12 @@ url = {http://mast.is/library/Regluger%C3%B0ir/EES-vidbaetir/10_2011.pdf}
 author = {{Holger Ellgaard}},
 title = {Ericsson bakelittelefon 1931},
 year = {2007},
-note = {[Online; sótt 27. september, 2018]},
+urldate = {2018-09-27},
 url = {https://commons.wikimedia.org/wiki/File:Ericsson_bakelittelefon_1931.jpg}
 }
 
 @inproceedings{Gudjonsdottir2015,
-author = {Guðj{\'{o}}nsd{\'{o}}ttir, Katr{\'{i}}n},
+author = {{Katr{\'{i}}n Guðj{\'{o}}nsd{\'{o}}ttir}},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/snertiefnimatvaela150414KG.pdf:pdf},
 pages = {56},
 publisher = {Fr{\ae}ðslufundur Matv{\ae}lastofnunar},
@@ -1796,7 +1794,6 @@ year = {2017}
   journal={Science advances},
   volume={3},
   number={4},
-  pages={e1600582},
   year={2017},
   publisher={American Association for the Advancement of Science}
 }
@@ -2298,7 +2295,6 @@ year = {2002}
   journal={PloS one},
   volume={9},
   number={12},
-  pages={e111913},
   year={2014},
   publisher={Public Library of Science}
 }
@@ -2380,7 +2376,6 @@ year = {2002}
   journal={Science advances},
   volume={3},
   number={7},
-  pages={e1700782},
   year={2017},
   publisher={American Association for the Advancement of Science}
 }
@@ -2433,7 +2428,7 @@ year = {1974}
 @article{Waters1972,
 author = {Carpenter, Edward J. and Anderson, J. Susan and Harvey, R. George and Miklas, Helen P. and Peck, B. Bradford},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/carpenter1972.pdf:pdf},
-number = {NOVEMBER},
+number = {N{\'{o}}vember},
 pages = {0--2},
 title = {{Polystyrene Spherules in Coastal Waters}},
 year = {1972}
@@ -2516,9 +2511,8 @@ year = {2018}
 }
 
 @misc{StefanFreyr,
-author = {{Stef{\'{a}}n Freyr}, Einarsson},
+author = {{Stef{\'{a}}n Freyr Einarsson}},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/ofanvatn.pdf:pdf},
-pages = {1},
 title = {{Sj{\'{a}}lfb{\ae}r meðh{\"{o}}ndlun ofanvatns}},
 url = {http://www.urridaholt.is/files/pdfs/ofanvatn.pdf},
 urldate = {16/01/2019}
@@ -2568,7 +2562,7 @@ year = {2018}
 }
 
 @techreport{Guðmundsson2003,
-author = {Guðmundsson, Ari Trausti and {\'{O}}lafsson, Flosi},
+author = {{Ari Trausti Guðmundsson og Flosi {\'{O}}lafsson}},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/Steinudhus.pdf:pdf},
 institution = {H{\'{u}}safriðunarnefnd r{\'{i}}kisins},
 pages = {43},
@@ -2624,7 +2618,7 @@ file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rpla
 keywords = {compressive strength,concrete paving blocks,fine aggregates,rubber granules},
 number = {January 2017},
 title = {{Use of Waste Rubber Granules for the Production of Concrete}},
-url = {https://www.researchgate.net/publication/312042870{\_}USE{\_}OF{\_}WASTE{\_}RUBBER{\_}GRANULES{\_}FOR{\_}THE{\_}PRODUCTION{\_}OF{\_}CONCRETE{\_}PAVING{\_}BLOCKS},
+url = {https://www.irjet.net/archives/V6/i3/IRJET-V6I31227.pdf},
 year = {2016}
 }
 
@@ -2635,7 +2629,7 @@ year = {2016}
     address = {Reykjavík, Iceland},
     year = {2019},
     url = {http://px.hagstofa.is/pxis/api/v1/is/Efnahagur/utanrikisverslun/1_voruvidskipti/03_inntollskra/UTA03801.px},
-    note = {[Gögn sótt 2019-02-20 10:52:53 using pxweb R pakkanum 0.9.14]},
+    urldate = {[Gögn sótt 2019-02-20 10:52:53 using pxweb R pakkanum 0.9.14]},
   }
 
 @Misc{tollurinn2,
@@ -2651,7 +2645,8 @@ year = {2016}
 @misc{ospar2019,
   title = {OSPAR, Surveyed beach locations},
   howpublished = {\url{http://www.mcsuk.org/ospar/map}},
-  note = {Accessed: 2019-02-27}
+  url = {http://www.mcsuk.org/ospar/map},
+  urldate = {2019-02-27}
 }
 
 @book{Alta2016,
@@ -2671,7 +2666,7 @@ file = {:C$\backslash$:/Users/BioPol VS/Dropbox/{\"{o}}rplast/verschoor2016.pdf:
 issn = {2016-0026},
 pages = {76},
 title = {{Emission of microplastics and potential mitigation measures}},
-url = {https://www.rivm.nl/dsresource?objectid=dad60794-a4a2-44f9-8416-624cfbc4861e{\&}type=org{\&}disposition=inline},
+url = {https://www.rijksoverheid.nl/binaries/rijksoverheid/documenten/rapporten/2016/07/11/emission-of-microplastics-and-potential-mitigation-measures/emission-of-microplastics-and-potential-mitigation-measures.pdf},
 year = {2016}
 }
 
@@ -2828,7 +2823,7 @@ year = {2016}
 }
 
 @techreport{Bj2012,
-author = {Bogi Brynjar Björnsson, Gerður Stefánsdóttir, Jórunn Harðardóttir},
+author = {{Bogi Brynjar Björnsson, Gerður Stefánsdóttir og Jórunn Harðardóttir}},
 institution = {Veðurstofa {\'{I}}slands},
 title = {{Auðkennisn{\'{u}}merakerfi {\'{i}}slenskra vatnshlota}},
 url = {https://www.ust.is/library/Skrar/Atvinnulif/Haf-og-vatn/Vatnatilskipun/Audkennisnumerakerfi_isl_vatnsholta.pdf},
@@ -2855,10 +2850,10 @@ url = {http://dx.doi.org/10.1016/j.envpol.2017.01.085},
 year = {2017}
 }
 
-@misc{nurdle,
+@misc{nurdlehunt.org,
   title = {SMALL, SMALLER, MICROSCOPIC!},
-  howpublished = {\url{https://www.nurdlehunt.org.uk/}},
-  note = {Sótt: 2019-05-09}
+  url = {https://www.nurdlehunt.org.uk/},
+  urldate = {2019-05-09}
 }
 
 @article{phuong2016there,
@@ -2972,6 +2967,7 @@ abstract = "Riverine transport to the marine environment is an important pathway
 @techreport{Commission2009,
 author = {{\"{O}}kopol},
 file = {:C$\backslash$:/Users/BioPol VS/Documents/Vinnumappa/lesefni/{\"{o}}rplast/Final report {\_}v5 May 2010{\_} part 1.pdf:pdf},
-title = {{EUROPEAN COMMISSION SERVICE CONTRACT IMPLEMENTATION AND REVIEW OF DIRECTIVE 2004 / 42 / EC EUROPEAN DIRECTIVE LIMITING THE VOC CONTENT IN CERTAIN PRODUCTS – CURRENT SCOPE : DECORATIVE PAINTS AND VARNISHES , VEHICLE REFINISHING PRODUCTS IMPLEMENTATION AND}},
-year = {2009}
+title = {{Implementation and Review\nof directive 2004/42/EC. European Directive Limiting The Voc Content In Certain Products – Current Scope: Decorative Paints And Varnishes, Vehicle Refinishing Products}},
+url={https://circabc.europa.eu/sd/a/67fe0545-cef1-470e-a378-b65b0165fb1d/Final%20report%20_v5%20May%202010_%20part%201.pdf},
+year = {2010}
 }
