--- a/docs/OrplastHaf.tex
+++ b/docs/OrplastHaf.tex
@@ -89,7 +89,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{3. September 2019}
+    \date{10. September 2019}
 
 \usepackage{booktabs}
 \usepackage[utf8x]{inputenc}
@@ -229,7 +229,7 @@ Sigvatn
 
 }
 
-\caption{Helstu uppsprettur örplasts á Íslandi og skipting þess eftir farleiðum í haf eða í jarðveg. Byggt á lægra mati í töflu 1.}\label{fig:unnamed-chunk-2}
+\caption{Helstu uppsprettur örplasts á Íslandi og skipting þess eftir farleiðum í haf eða í jarðveg. Byggt á lægra mati.}\label{fig:unnamed-chunk-2}
 \end{figure}
 
 \textbf{Í hafinu} brotnar örplast mjög hægt niður þar sem hitastig í sjónum er lágt og útfjólubláir geislar sólar berast aðeins að takmörkuðu leyti í efstu sjávarlögin en ekki á meira dýpi. Það kemur því kannski ekki á óvart að mikil uppsöfnun örplasts geti verið á hafsbotni en einhver mesti þéttleiki örplastagna sem fundist hefur á hafsbotni var við Svalbarða á yfir 2,5 km dýpi sem bendir til þess að örplast berist í miklu magni með sjávarstraumum.
@@ -666,7 +666,7 @@ Sigvatn
 
 }
 
-\caption{Helstu uppsprettur örplasts á Íslandi og skipting eftir farleiðum í haf eða í jarðveg. Byggt á lægra mati.}\label{fig:unnamed-chunk-6}
+\caption{Helstu uppsprettur örplasts á Íslandi og skipting þess eftir farleiðum í haf eða í jarðveg. Byggt á lægra mati.}\label{fig:unnamed-chunk-6}
 \end{figure}
 
 \hypertarget{samgongur-byggingar-og-inaur}{%
@@ -802,12 +802,6 @@ Vegagerðin & Málning &  &  & 87\% & 218 & 15-40 & 33-87 & 3,3-8,7\\
 \end{table}
 
 Líkt og við á um dekkjaagnir berst slit frá vegmerkingum helst með vindi og ofanvatni í jarðveg eða fráveitukerfi, skurði, ár og læki. Miðað við 60\% ofanvatns berist í fráveitukerfi í þéttbýli og 10\% í dreifbýli má áætla að losun örplasts í hafið frá vegmerkingum sé \textbf{5,7 - 42,6 tonn}.
-
-\begin{figure}
-\centering
-\includegraphics{OrplastHaf_files/figure-latex/vegmerkingar2-1.pdf}
-\caption{\label{fig:vegmerkingar2}Áætluð árleg heildarlosun örplasts í hafið frá vegmerkingum á Íslandi árið 2017 er \textbf{5,7 - 42,6 t}.}
-\end{figure}
 
 \hypertarget{hjolbarar-flugvela}{%
 \subsubsection*{Hjólbarðar flugvéla}\label{hjolbarar-flugvela}}
@@ -1056,7 +1050,7 @@ Hlutfall gerviefna í þvotti & 30-50 & \% gerviefni\\
 \end{tabular}
 \end{table}
 
-Áætluð heildarlosun örplasts frá þvotti á Íslandi á ári er því \textbf{8,2-32 tonn}, með þeim fyrirvara að gögnin eru komin til ára sinna og gerviefni verða æ algengari í þvotti ásamt því að losun örplasts við hvern þvott er ekki föst stærð heldur breytileg eftir hversu notuð fötin eru. Tölurar sem hér er stuðst við um örplastlosun frá þvotti á fatnaði eru frá því 2010\textsuperscript{\protect\hyperlink{ref-pakula2010electricity}{121}} en þar sem fatnaður úr náttúrulegum efnum er á undanhaldi og notkun gerviefna í fatnaði eykst ár hvert er líklegt að hér sé um vanmat að ræða.
+Áætluð heildarlosun örplasts frá þvotti á Íslandi á ári er því \textbf{8,2-32 tonn}, með þeim fyrirvara að gögnin eru komin til ára sinna og gerviefni verða æ algengari í þvotti ásamt því að losun örplasts við hvern þvott er ekki föst stærð heldur breytileg eftir hversu notuð fötin eru. Tölurnar sem hér er stuðst við um örplastlosun frá þvotti á fatnaði eru frá því 2010\textsuperscript{\protect\hyperlink{ref-pakula2010electricity}{121}} en þar sem fatnaður úr náttúrulegum efnum er á undanhaldi og notkun gerviefna í fatnaði eykst ár hvert er líklegt að hér sé um vanmat að ræða.
 
 Mikið af gerviefnum er á vinnustöðum og á heimilum fólks, alls konar vefnaður, teppi og mottur, áklæði utan um sófa og stóla, tuskudýr og fleira er innadyra sem ekki er minnst á í þessari skýrslu. Ryk innanhúss getur talist til uppsprettu örplasts í hafið, sérstaklega berist það með í niðurföll en ætla má að innanhúsryk endi að miklu leyti í sorpi.
 
